# core-ml-platform

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
src/configs/: __init__.py  dev.py  production.py
src/core_ml/: cli.py  context.py
src/core_ml/common/: assets.py  queries.py
src/core_ml/infrastructure/: __init__.py  database.py  logger.py  ml_flow.py
src/core_ml/models/: __init__.py  positive_linear.py  random_forest_model.py  xgboost_model.py
src/core_ml/tasks/: __init__.py  base.py
src/core_ml/tasks/_template/: config.py
src/core_ml/tasks/advanced_power_forecast/: config.py  predict.py  train.py
src/core_ml/tasks/advanced_power_forecast/utils/: preprocess.py
src/ml/: __init__.py  __main__.py  cli.py  context.py
src/ml/common/: assets.py  dates.py  queries.py  split_data.py  validations.py
src/ml/infrastructure/: __init__.py  database.py  logger.py  ml_flow.py
src/ml/models/: __init__.py  base.py  positive_linear.py  random_forest_model.py  xgboost_model.py
src/ml/queries/: advanced_power_forecast.py  assets.py  base.py  ml_models.py
src/ml/tasks/: __init__.py  base.py
src/ml/tasks/_template/: config.py
src/ml/tasks/advanced_power_forecast/: config.py  predict.py  train.py
tests/: README.md
